# tutanak

./: Cargo.toml  README.md  TODOS.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/examples/: real_check.rs
core/src/: audio.rs  capture.rs  config.rs  lib.rs  stitch.rs  storage.rs  text.rs
core/src/engine/: mod.rs  openai.rs
core/tests/: groq_mock.rs
gui/: Cargo.toml  build.rs
gui/src/: main.rs
gui/ui/: app.slint
